objects/LeasePayment__c.object
<CustomObject>
    <fields>
        <fullName>Days_Remaining_to_meet_FULW_SLA__c</fullName>
        <description>This filed shows the number of days dealers have remaining to be in compliance with the Final Unconditional Lien Waiver SLA</description>
        <formula>IF (

     ISBLANK( Uncond_Fin_LW_Rcvd__c ) ,

     14 - ( TODAY() -  Intrcnct_Pymnt_Sent__c ),

     14 - (Uncond_Fin_LW_Rcvd__c - Intrcnct_Pymnt_Sent__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to meet FULW SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_to_meet_Install_SLA__c</fullName>
        <description>This field calculates the days remaining for partners to be in compliance with the Install SLA.</description>
        <formula>IF (
     ISBLANK(Install_Pymnt_Apprvd__c) ,

     30 - ( TODAY() -  Date_Delivered__c ),

     30 - (Install_Pymnt_Apprvd__c - Date_Delivered__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to meet Install SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_to_meet_Interconnect_SLA__c</fullName>
        <formula>IF (
     ISBLANK(Intrcnct_Pymnt_Apprvd__c) ,

     14 - ( TODAY() -  PTO_Letter_Issuance_Date__c ),

     14 - (Intrcnct_Pymnt_Apprvd__c - PTO_Letter_Issuance_Date__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to meet Interconnect SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Stage__c</fullName>
        <formula>Today() - Current_Stage_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_remaining_for_DP_to_Auto_approve__c</fullName>
        <description>This formula calculates how many days are remaining until the DP will auto approve. It also shows how many days since the auto approve deadline via negative numbers.</description>
        <formula>IF ( Protected_Area__c = &quot;Yes&quot; ,

60 - (TODAY()  -  Declaration_Prealable_Request_Date__c ),

30 - (TODAY()  -  Declaration_Prealable_Request_Date__c )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days remaining for DP to Auto-approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_of_the_ERDF_connection_works__c</fullName>
        <formula>PDR_order_and_payment_date__c +60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline of  the ERDF connection works</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lease_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Contact old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lease_Payments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_10_PO_Receipt_Complete__c</fullName>
        <description>Dealer Fee – 10% PO Receipt Complete</description>
        <label>Dealer Fee – 10% PO Receipt Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_10_PO_Receipt_Number__c</fullName>
        <description>Dealer Fee – 10% PO Receipt Number</description>
        <label>Dealer Fee – 10% PO Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_90_PO_Receipt_Complete__c</fullName>
        <description>Dealer Fee – 90% PO Receipt Complete</description>
        <label>Dealer Fee – 90% PO Receipt Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_90_PO_Receipt_Number__c</fullName>
        <description>Dealer Fee – 90% PO Receipt Number</description>
        <label>Dealer Fee – 90% PO Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Install__c</fullName>
        <description>Dealer Fee – Install</description>
        <label>Dealer Fee – Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Interconnect__c</fullName>
        <label>Dealer Fee – Interconnect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Origination_PO_Receipt_Comple__c</fullName>
        <description>Case #00478102 - Praveen created this field to capture Origination fee. This field is not populated via SOA.</description>
        <label>Dealer Fee-Origination PO Receipt Comple</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Origination_PO_Receipt_Number__c</fullName>
        <description>Case #00478102 - Praveen created this field to capture Origination fee. This field is not populated via SOA.</description>
        <label>Dealer Fee-Origination PO Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Origination__c</fullName>
        <description>Dealer Fee – Origination</description>
        <label>Dealer Fee – Origination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_PO__c</fullName>
        <label>Dealer Fee PO#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Total__c</fullName>
        <formula>IF(CONTAINS(TEXT(Quote__r.Quote_type__c),&apos;TPS&apos;), Quote__r.Total_Dealer_Fee__c,
IF(Dealer_Fee_Total_old__c &gt; 0 , Dealer_Fee_Total_old__c, Quote__r.Dealer_Fees__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Fee - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Total_old__c</fullName>
        <label>Dealer Fee - Total old</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Labor_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Labor Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Lease_Contact_Email__c</fullName>
        <label>Dealer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Lease_Contact_Name__c</fullName>
        <label>Dealer Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Material_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Material Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>IF( NOT(ISBLANK( Dealer_Name_old__c)) , Dealer_Name_old__c,
Partner_Account__r.Name
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name_old__c</fullName>
        <label>Dealer Name old</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Origination_Fee_Participant__c</fullName>
        <formula>IF((!Partner_Account__r.Origination_Fee_Participant__c&amp;&amp;FinancingType__c=&apos;Lease&apos;),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Origination Fee Participant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Origination_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Origination Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Rebate_Claim__c</fullName>
        <label>Dealer Rebate Claim</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Rebate_Reservation_Confirmation__c</fullName>
        <description>Dealer Rebate Reservation Confirmation #</description>
        <label>Dealer Rebate Reservation Confirmation #</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_Prealable_Approved__c</fullName>
        <label>Declaration Prealable (DP) Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Prealable_Request_Date__c</fullName>
        <label>Declaration Prealable Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Prealable_Status__c</fullName>
        <label>Declaration Prealable Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Info Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disapproved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_Note__c</fullName>
        <label>Delete Note</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Inverters__c</fullName>
        <label>Delivery Date Inverters</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Mounting__c</fullName>
        <label>Delivery Date Mounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_PV__c</fullName>
        <label>Delivery Date PV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_point_number_of_production__c</fullName>
        <label>Delivery point number of production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Account__r.Oracle_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Des_Plan_Apprvd__c</fullName>
        <label>Des Plan Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Des_Plan_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL( Des_Plan_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Des Plan Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Des_Plan_Rcvd__c</fullName>
        <label>Design Plan Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docs_Gen_Date__c</fullName>
        <formula>IF( NOT(ISBLANK(   Docs_Gen_Date_old__c   )) ,
TEXT(MONTH(Docs_Gen_Date_old__c) ) &amp; &quot;/&quot; &amp; TEXT(DAY(Docs_Gen_Date_old__c) ) &amp; &quot;/&quot; &amp; TEXT(YEAR(Docs_Gen_Date_old__c)),
IF(NOT(ISBLANK(Quote__r.Lease_doc_Created_Date__c)),
TEXT(MONTH(Quote__r.Lease_doc_Created_Date__c) ) &amp; &quot;/&quot; &amp; TEXT(DAY(Quote__r.Lease_doc_Created_Date__c) ) &amp; &quot;/&quot; &amp; TEXT(YEAR(Quote__r.Lease_doc_Created_Date__c)),
&quot;&quot;))</formula>
        <label>Docs Gen Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docs_Gen_Date_old__c</fullName>
        <label>Docs Gen Date old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_remaining_for_install_payments__c</fullName>
        <label>Documents remaining for install payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_remaining_for_the_commissionin__c</fullName>
        <label>Documents remaining for the commissionin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dossier_Preparation__c</fullName>
        <label>Dossier Preparation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <formula>IF(( Down_Payment_old__c &gt; 0) ,Down_Payment_old__c, Quote__r.Final_Partial_Prepay_w_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment_old__c</fullName>
        <label>Down Payment old</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERDF_Approved__c</fullName>
        <label>ERDF Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERDF_Delivery_Receipt_Date_Expired__c</fullName>
        <label>ERDF Delivery Receipt Date Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERDF_Interconnection_Request_Date__c</fullName>
        <description>?</description>
        <label>ERDF Interconnection Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERDF_Proposal_Approved_Date__c</fullName>
        <label>ERDF Proposal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERDF_Status__c</fullName>
        <label>ERDF Status</label>
        <picklist>
            <picklistValues>
                <fullName>PTF Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTF Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTF Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTF Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PTF Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERDF_receipt_date_of_our_order__c</fullName>
        <label>ERDF receipt date of our order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESS_Commission_Date__c</fullName>
        <description>It&apos;s date field added to page layout to capture the information and use it booking template report.</description>
        <label>ESS Commission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESS_Term__c</fullName>
        <description>It&apos;s being used in booking template...</description>
        <label>ESS Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Buyout_Date__c</fullName>
        <formula>IF( NOT(ISBLANK(  Early_Buyout_Date_old__c  )) ,
TEXT(MONTH(Early_Buyout_Date_old__c) ) &amp; &quot;/&quot; &amp; TEXT(DAY(Early_Buyout_Date_old__c) ) &amp; &quot;/&quot; &amp; TEXT(YEAR(Early_Buyout_Date_old__c))
, Quote__r.Early_Buyout_Option_Date__c )</formula>
        <label>Early Buyout Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Buyout_Date_old__c</fullName>
        <label>Early Buyout Date old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Buyout_Price__c</fullName>
        <label>Early Buyout Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electricity_Distributor__c</fullName>
        <description>Case 00425112</description>
        <label>Electricity Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>CitiPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jemena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powercor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP-Ausnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Energy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <formula>IF( NOT(ISBlank( Email_1_old__c)) , Email_1_old__c,
Contact__r.Email
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1_old__c</fullName>
        <label>Email 1 old</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <formula>IF( NOT(ISNull( Email_2_old__c)) , Email_2_old__c,
Contact__r.Email
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_old__c</fullName>
        <label>Email 2 old</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Date__c</fullName>
        <label>Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lease_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Solutions__c</fullName>
        <description>This field stores the Oracle Order Type for the ESS order.</description>
        <label>Energy Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>SPEB CVPP Order</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Energy_Start_Date__c</fullName>
        <label>Energy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_NPV__c</fullName>
        <label>Est NPV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Yr_1_Production__c</fullName>
        <label>Est Yr 1 Production</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate__c</fullName>
        <description>New Homes Case#: 539314 : NH Quotes/LPO will never have Expected rebate value. Rebate Actual must be used as Expected rebate for booking template</description>
        <formula>IF(Country_Domain__c &lt;&gt; &apos;au&apos;, IF(FinancingType__c=&apos;NH Lease&apos;,Rebate_Actual__c, IF( ( Expected_Rebate_old__c &gt; 0) ,Expected_Rebate_old__c, Quote__r.Solar_Rebate_Amount__c   ) ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate_old__c</fullName>
        <label>Expected Rebate old</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Release_of_NTP__c</fullName>
        <formula>IF( NOT(ISBLANK(Tranche_2_Batch__c)),Tranche_2_Batch__r.Expected_Release_of_NTP__c, Notice_to_Proceed_Sent__c )</formula>
        <label>Expected Release of NTP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMV_Purchase_Price__c</fullName>
        <label>FMV Purchase Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMV_Rate__c</fullName>
        <description>This is the FMV $/watt rate that is used by to calculate Fair Market Value. This field is populated by a Apex trigger that fires when Placed in service is populated.</description>
        <label>FMV Rate</label>
        <precision>9</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMV__c</fullName>
        <description>For AU it is equal to System price passed from GPP</description>
        <formula>If(Country_Domain__c &lt;&gt; &apos;au&apos;, (FMV_by_State__c * Size_Wdc__c ), Quote__r.System_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For AU it is equal to System price passed from GPP</inlineHelpText>
        <label>FMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMV_by_State__c</fullName>
        <description>FMV by State</description>
        <label>FMV by State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>IF(Country_Domain__c &lt;&gt; &apos;au&apos;, FMV_Rate__c * Quote__r.Maximum_Rated_Capacity_Watts__c, Quote__r.System_Price_Excluding_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value_acctg__c</fullName>
        <description>This field contains the Fair Market value - the value will be calculated outside of SFDC by Sunpower Finance, and manually entered into the system.</description>
        <label>Fair Market Value (acctg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiT_Bonus_Approval_Status__c</fullName>
        <label>FiT Bonus Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Nr__c</fullName>
        <label>File Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <label>Filing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married - Jointly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married - Separate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Head</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fin_Permits_Apprvd__c</fullName>
        <label>Fin Permits Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fin_Permits_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL( Fin_Permits_Rcvd__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin Permits Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fin_Permits_Rcvd__c</fullName>
        <label>Final Permits Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financier_Change_Date__c</fullName>
        <inlineHelpText>When changing the Financier, select the date.</inlineHelpText>
        <label>Financier Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <formula>IF(Text(Quote__r.Quote_type__c)=&apos;Residential New Homes Lease Quotation&apos;,&apos;NH Lease&apos;,Text(Quote__r.QuoteType__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Completion_Payment__c</fullName>
        <label>Financing Completion Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Prepayment__c</fullName>
        <description>Financing Prepayment</description>
        <label>Financing Prepayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name_1__c</fullName>
        <formula>IF( NOT(ISBLANK( First_Name_1_old__c  )) , First_Name_1_old__c , Quote__r.Temp_Contact_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_1_old__c</fullName>
        <label>First Name 1 old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_2__c</fullName>
        <formula>IF( NOT(ISBLANK( First_Name_2_old__c  )) , First_Name_2_old__c ,Quote__r.Temp_Contact_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_2_old__c</fullName>
        <label>First Name 2 old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_date_of_the_Non_opposition_ce__c</fullName>
        <label>Forwarding date of the Non-opposition ce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forwarding_date_to_the_partner__c</fullName>
        <label>Forwarding date to the partner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forwarding_date_to_the_tax_Department__c</fullName>
        <label>Forwarding date to the tax Department</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Lease__c</fullName>
        <formula>IF(Full_Prepayment_Amt_old__c &gt; 0, &apos;TRUE&apos;, IF(Quote__r.Full_Prepayment_of_Lease_Amount__c &gt; 0, &apos;TRUE&apos;, &apos;FALSE&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Prepaid Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Lease_old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Prepaid Lease old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Prepayment_Amt__c</fullName>
        <formula>IF((Full_Prepayment_Amt_old__c &gt; 0), Full_Prepayment_Amt_old__c ,Quote__r.Full_Prepayment_of_Lease_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Prepayment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Prepayment_Amt_old__c</fullName>
        <label>Full Prepayment Amt old</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Tranche__c</fullName>
        <label>Financier</label>
        <picklist>
            <picklistValues>
                <fullName>Access 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corona Sands, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helios II Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helios Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinite Sunshine 2015-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lux II Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lux Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photon Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR-ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR MS 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR – Non US Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR SG 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR SR 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Capital LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Residential I LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Resi II, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrise 2 LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrise 3 LLC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grid_Connection_Approval_Status__c</fullName>
        <label>Grid Connection Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guarantee_Start_Date__c</fullName>
        <description>Case 00369768 Requested by Stephen Kincheloe to track the Guarantee Start Date of system</description>
        <label>Guarantee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIC_Financing_Term_in_Months__c</fullName>
        <formula>12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HIC Financing Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>IF( NOT(ISBLANK( Home_Phone_old__c )) , Home_Phone_old__c, End_Customer_Account__r.Phone )</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_old__c</fullName>
        <label>Home Phone old</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Homeowner__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homeowner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_signature_Date__c</fullName>
        <label>Homeowner  signature Date</label>
        <type>Date</type>
    </fields>
</CustomObject>